multiple features: search, css fixes, etc

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -23,6 +23,10 @@
 @use "../view/pages/Cart/cart.scss";
 @use "../view/pages/CheckOut/checkOut.scss";
 @use "../view/pages/Account/account.scss";
+@use "../view/pages/Contact/contact.scss";
+@use "../view/pages/Support/support.scss";
+@use "../view/pages/Admin/admin.scss";
+@use "../view/pages/Search/search.scss";
 
 .table-cell-center {
   display: table-cell;
