fixed search card css

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,6 +27,9 @@
 @use "../view/pages/Support/support.scss";
 @use "../view/pages/Admin/admin.scss";
 @use "../view/pages/Search/search.scss";
+@use "../view/pages/Login/login.scss";
+@use "../view/pages/CheckoutSuccess/checkoutSuccess.scss";
+@use "../view/pages/NotFound/notFound.scss";
 
 .table-cell-center {
   display: table-cell;
