--- a/src/sass/variables.scss
+++ b/src/sass/variables.scss
@@ -21,7 +21,9 @@ $neutral-700: #404040;
 $neutral-800: #262626;
 $neutral-900: #171717;
 
+$success-100: #dcfce7;
 $success-500: #10b981;
+$success-700: #15803d;
 $warning-500: #f59e0b;
 $error-500: #ef4444;
 
